--- a/package.json
+++ b/package.json
@@ -42,10 +42,7 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "serve": "serve -s build",
-    "startup": "serve ./build",
-    "start": "serve ./build",
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
