made changes in package.json

--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "serve": "serve -s build",
+    "startup": "serve ./build",
+    "start": "serve ./build",
+    "dev": "react-scripts start",   
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
